Update names for text and font typography factories.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,93 +109,93 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_example_discovery\n",
     "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_imports\n",
-    "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_factory_extraction\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_layout\n",
     "    core_testing --> core_base\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_borders\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    utilities_accessibility --> utilities_layout\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_accessibility --> utilities_layout\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> core_testing\n",
+    "    utilities_effects --> builders_scales\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> core_testing\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_testing\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
-    "    utilities_svg --> builders_colors\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_transforms --> builders_scales\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -6100,11 +6100,14 @@
     "```python\n",
     "from cjm_fasthtml_tailwind.utilities.typography import (\n",
     "    font_family,\n",
+    "    FONT_SCALES,\n",
+    "    FONT_SIZE_CONFIG,\n",
+    "    font_size,\n",
     "    antialiased,\n",
     "    subpixel_antialiased,\n",
     "    italic,\n",
     "    not_italic,\n",
-    "    font,\n",
+    "    font_weight,\n",
     "    font_stretch,\n",
     "    normal_nums,\n",
     "    ordinal,\n",
@@ -6125,12 +6128,12 @@
     "    list_position,\n",
     "    list_style,\n",
     "    text_align,\n",
-    "    text,\n",
+    "    text_color,\n",
     "    underline,\n",
     "    overline,\n",
     "    line_through,\n",
     "    no_underline,\n",
-    "    decoration,\n",
+    "    decoration_color,\n",
     "    decoration_style,\n",
     "    DECORATION_THICKNESS_CONFIG,\n",
     "    decoration_thickness,\n",
@@ -6158,26 +6161,29 @@
     "    wrap_normal,\n",
     "    hyphens,\n",
     "    content,\n",
+    "    FontFamily,\n",
     "    test_typography_font_family_examples,\n",
+    "    test_typography_font_size_examples,\n",
     "    test_typography_font_smoothing_examples,\n",
     "    test_typography_font_style_examples,\n",
-    "    FontFactory,\n",
+    "    FontWeight,\n",
     "    test_typography_font_weight_examples,\n",
+    "    FontStretch,\n",
     "    test_typography_font_stretch_examples,\n",
     "    test_typography_font_variant_numeric_examples,\n",
     "    test_typography_spacing_examples,\n",
-    "    LineClampFactory,\n",
     "    test_typography_line_clamp_examples,\n",
-    "    LeadingFactory,\n",
     "    test_typography_line_height_examples,\n",
     "    ListImageUtility,\n",
     "    ListImageFactory,\n",
     "    test_typography_list_image_examples,\n",
+    "    ListStylePosition,\n",
+    "    ListStyleType,\n",
     "    test_typography_list_styles_examples,\n",
+    "    TextAlign,\n",
     "    test_typography_text_alignment_examples,\n",
-    "    TextFactory,\n",
-    "    test_typography_font_size_examples,\n",
     "    test_typography_text_color_examples,\n",
+    "    DecorationStyle,\n",
     "    test_typography_text_decoration_examples,\n",
     "    test_typography_underline_offset_examples,\n",
     "    test_typography_text_transform_examples,\n",
@@ -6192,8 +6198,7 @@
     "    ContentUtility,\n",
     "    ContentFactory,\n",
     "    test_typography_content_examples,\n",
-    "    test_typography_fasthtml_examples,\n",
-    "    test_typography_factory_documentation\n",
+    "    test_typography_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -6202,6 +6207,11 @@
     "```python\n",
     "def test_typography_font_family_examples()\n",
     "    \"Test font family utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_size_examples()\n",
+    "    \"Test font size utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6257,11 +6267,6 @@
     "```python\n",
     "def test_typography_text_alignment_examples()\n",
     "    \"Test text alignment utilities.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_typography_font_size_examples()\n",
-    "    \"Test font size utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6334,37 +6339,18 @@
     "    \"Test typography utilities in practical FastHTML component examples.\"\n",
     "```\n",
     "\n",
-    "```python\n",
-    "def test_typography_factory_documentation()\n",
-    "    \"Test that typography factories have accessible documentation.\"\n",
-    "```\n",
-    "\n",
     "#### Classes\n",
     "\n",
     "```python\n",
-    "class FontFactory:\n",
-    "    def __init__(self)\n",
-    "    \"Factory for font utilities including family and weight.\"\n",
-    "    \n",
-    "    def __init__(self)\n",
-    "        \"Initialize font factory with families and weights.\"\n",
-    "    \n",
-    "    def get_info(\n",
-    "            self\n",
-    "        ) -> Dict[str, Any]:  # Factory information\n",
-    "        \"Get information about the font factory.\"\n",
+    "class FontFamily(str, Enum):\n",
     "```\n",
     "\n",
     "```python\n",
-    "class LineClampFactory(ScaledFactory):\n",
-    "    \"Factory for line clamp utilities.\"\n",
-    "    \n",
+    "class FontWeight(str, Enum):\n",
     "```\n",
     "\n",
     "```python\n",
-    "class LeadingFactory(ScaledFactory):\n",
-    "    \"Factory for line height utilities with restricted numeric range.\"\n",
-    "    \n",
+    "class FontStretch(str, Enum):\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6406,12 +6392,19 @@
     "```\n",
     "\n",
     "```python\n",
-    "class TextFactory:\n",
-    "    def __init__(self)\n",
-    "    \"Enhanced text factory that supports both font sizes and text colors.\"\n",
-    "    \n",
-    "    def __init__(self)\n",
-    "        \"Initialize text factory with size support.\"\n",
+    "class ListStylePosition(str, Enum):\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class ListStyleType(str, Enum):\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class TextAlign(str, Enum):\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class DecorationStyle(str, Enum):\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6455,11 +6448,16 @@
     "#### Variables\n",
     "\n",
     "```python\n",
+    "font_family  # Font family utilities\n",
+    "FONT_SCALES = [13 items]  # Font size named scales\n",
+    "FONT_SIZE_CONFIG  # Font size configuration\n",
+    "font_size  # Font size factory\n",
     "antialiased  # Antialiased font smoothing\n",
     "subpixel_antialiased  # Subpixel antialiased font smoothing\n",
     "italic  # Italic font style\n",
     "not_italic  # Normal font style\n",
-    "font  # Enhanced font factory for family and weight\n",
+    "font_weight  # Font weight utilities\n",
+    "font_stretch  # Font stretch utilities\n",
     "normal_nums  # Normal numbers\n",
     "ordinal  # Ordinal numbers\n",
     "slashed_zero  # Slashed zero\n",
@@ -6476,12 +6474,16 @@
     "LEADING_CONFIG\n",
     "leading  # Line height factory\n",
     "list_image  # List image factory\n",
-    "text  # Enhanced text factory for size and color\n",
+    "list_position  # List position factory\n",
+    "list_style  # List type factory\n",
+    "text_align  # Text alignment factory\n",
+    "text_color  # Text color factory\n",
     "underline  # Underline text\n",
     "overline  # Overline text\n",
     "line_through  # Line through text\n",
     "no_underline  # No text decoration\n",
-    "decoration  # Text decoration color factory\n",
+    "decoration_color  # Text decoration color factory\n",
+    "decoration_style  # Text decoration style factory\n",
     "DECORATION_THICKNESS_CONFIG\n",
     "decoration_thickness  # Text decoration thickness factory\n",
     "UNDERLINE_OFFSET_CONFIG\n",
