--- a/nbs/utilities/accessibility.ipynb
+++ b/nbs/utilities/accessibility.ipynb
@@ -195,7 +195,7 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import animate\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, items\n",
     "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
@@ -243,9 +243,9 @@
     "    \n",
     "    # Navigation with forced color adjustments\n",
     "    high_contrast_nav = Nav(\n",
-    "        A(\"Home\", href=\"/\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
-    "        A(\"About\", href=\"/about\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
-    "        A(\"Contact\", href=\"/contact\", cls=combine_classes(forced_color_adjust.none, text.blue._600)),\n",
+    "        A(\"Home\", href=\"/\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
+    "        A(\"About\", href=\"/about\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
+    "        A(\"Contact\", href=\"/contact\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
     "        cls=combine_classes(forced_color_adjust.auto, display_tw.flex, gap(4))\n",
     "    )\n",
     "    assert high_contrast_nav.attrs['class'] == \"forced-color-adjust-auto flex gap-4\"\n",
