--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -779,7 +779,7 @@
     "    \"\"\"Test composing gradient backgrounds with color stops.\"\"\"\n",
     "    from fasthtml.common import Div\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    \n",
     "    # Simple two-color gradient\n",
     "    gradient1 = Div(\n",
@@ -789,7 +789,7 @@
     "            from_color.blue._500,\n",
     "            to_color.purple._600,\n",
     "            p(8),\n",
-    "            text.white\n",
+    "            text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-linear-to-r\" in gradient1.attrs['class']\n",
@@ -805,7 +805,7 @@
     "            via_color.yellow._500,\n",
     "            to_color.green._600,\n",
     "            p(8),\n",
-    "            text.white\n",
+    "            text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"via-yellow-500\" in gradient2.attrs['class']\n",
@@ -1149,13 +1149,13 @@
        "      <h1>Hero Title</h1>\n",
        "    </div>\n",
        "  </section>\n",
-       "  <h1 class=\"bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-purple-600 text-7xl\">Gradient Text</h1>\n",
+       "  <h1 class=\"bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-red-600 text-7xl\">Gradient Text</h1>\n",
        "</div>\n",
        "\n",
        "```"
       ],
       "text/plain": [
-       "div((div((h1(('Welcome',),{'class': 'text-white'}), p(('This is a card with a blue background',),{})),{'class': 'bg-blue-500 p-6 rounded-lg'}), section((div((h1(('Hero Title',),{}),),{'class': 'bg-black/50 p-8'}),),{'class': 'bg-cover bg-center bg-no-repeat relative'}), h1(('Gradient Text',),{'class': 'bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-purple-600 text-7xl'})),{'class': 'grid gap-5'})"
+       "div((div((h1(('Welcome',),{'class': 'text-white'}), p(('This is a card with a blue background',),{})),{'class': 'bg-blue-500 p-6 rounded-lg'}), section((div((h1(('Hero Title',),{}),),{'class': 'bg-black/50 p-8'}),),{'class': 'bg-cover bg-center bg-no-repeat relative'}), h1(('Gradient Text',),{'class': 'bg-clip-text text-transparent bg-linear-to-r from-blue-500 to-red-600 text-7xl'})),{'class': 'grid gap-5'})"
       ]
      },
      "execution_count": null,
@@ -1170,13 +1170,13 @@
     "    from fasthtml.common import Div, H1, P, Section\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Card with colored background\n",
     "    card = Div(\n",
-    "        H1(\"Welcome\", cls=str(text.white)),\n",
+    "        H1(\"Welcome\", cls=str(text_color.white)),\n",
     "        P(\"This is a card with a blue background\"),\n",
     "        cls=combine_classes(bg.blue._500, p(6), rounded.lg)\n",
     "    )\n",
@@ -1204,17 +1204,17 @@
     "        \"Gradient Text\",\n",
     "        cls=combine_classes(\n",
     "            bg_clip.text,\n",
-    "            text.transparent,\n",
+    "            text_color.transparent,\n",
     "            bg_linear.to_r,\n",
     "            from_color.blue._500,\n",
-    "            to_color.purple._600,\n",
-    "            text._7xl\n",
+    "            to_color.red._600,\n",
+    "            font_size._7xl\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-clip-text\" in gradient_text.attrs['class']\n",
     "    assert \"bg-linear-to-r\" in gradient_text.attrs['class']\n",
     "    assert \"from-blue-500\" in gradient_text.attrs['class']\n",
-    "    assert \"to-purple-600\" in gradient_text.attrs['class']\n",
+    "    assert \"to-red-600\" in gradient_text.attrs['class']\n",
     "    \n",
     "    # Return all examples in a grid layout\n",
     "    return Div(\n",
