--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -2689,7 +2689,7 @@
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
@@ -2709,7 +2709,7 @@
     "            shadow.sm,\n",
     "            shadow.lg.hover,\n",
     "            transition.shadow,\n",
-    "            p.x(4), p.y(2), bg.blue._500, text.white, rounded.full\n",
+    "            p.x(4), p.y(2), bg.blue._500, text_color.white, rounded.full\n",
     "        )\n",
     "    )\n",
     "    assert \"shadow-sm\" in button.attrs['class']\n",
@@ -2732,7 +2732,7 @@
     "        cls=combine_classes(\n",
     "            shadow._2xl,\n",
     "            shadow_color.black,\n",
-    "            w(14), h(14), rounded.full, bg.purple._600, text.white\n",
+    "            w(14), h(14), rounded.full, bg.purple._600, text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"shadow-2xl\" in fab.attrs['class']\n",
@@ -3058,7 +3058,7 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg, bg_linear, from_color, to_color\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
@@ -3081,7 +3081,7 @@
     "    ring_button = Button(\n",
     "        \"Click for Ring\",\n",
     "        cls=combine_classes(\n",
-    "            p.x(6), p.y(3), bg.blue._500, text.white, rounded.lg,\n",
+    "            p.x(6), p.y(3), bg.blue._500, text_color.white, rounded.lg,\n",
     "            ring(4).focus,\n",
     "            ring_color.blue._300.focus\n",
     "        )\n",
@@ -3256,7 +3256,7 @@
     "    from fasthtml.common import Div, Img, Section, H1, P\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg, bg_linear, from_color, to_color, via_color\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
@@ -3269,7 +3269,7 @@
     "            mask_linear._180,\n",
     "            mask_t_from.black,\n",
     "            mask_t_to.transparent,\n",
-    "            p(8), bg.blue._500, text.white\n",
+    "            p(8), bg.blue._500, text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"mask-linear-180\" in fade_out_div.attrs['class']\n",
@@ -3298,7 +3298,7 @@
     "        cls=combine_classes(\n",
     "            mask_x_from._10,\n",
     "            mask_x_to._90,\n",
-    "            p.x(8), p.y(4), bg_linear.to_r, from_color.purple._500, to_color.pink._500, text.white\n",
+    "            p.x(8), p.y(4), bg_linear.to_r, from_color.purple._500, to_color.pink._500, text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"mask-x-from-10\" in fade_edges.attrs['class']\n",
@@ -3314,7 +3314,7 @@
     "            mask_radial_farthest_corner,\n",
     "            mask_radial_from.black,\n",
     "            mask_radial_to.transparent,\n",
-    "            p(16), bg.gray._900, text.white\n",
+    "            p(16), bg.gray._900, text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"mask-ellipse\" in corner_spotlight.attrs['class']\n",
@@ -3361,7 +3361,7 @@
     "            mask_r_to(\"90%\"),\n",
     "            mask_mode.alpha,\n",
     "            mask_origin.content,\n",
-    "            p(12), bg_linear.to_r, from_color.indigo._500, via_color.purple._500, to_color.pink._500, text.white\n",
+    "            p(12), bg_linear.to_r, from_color.indigo._500, via_color.purple._500, to_color.pink._500, text_color.white\n",
     "        )\n",
     "    )\n",
     "    assert \"mask-linear-45\" in complex_mask.attrs['class']\n",
