--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -1602,14 +1602,14 @@
     "    from fasthtml.common import Div, Header, Nav, Main, Article, Aside, Footer, Img, Button, H1, H2, P\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import font, text, text_align\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_weight, font_size, text_color, text_align\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import h, min_h\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    \n",
     "    # Flexbox centered navigation\n",
     "    nav = Nav(\n",
-    "        Div(\"Logo\", cls=str(font.bold)),\n",
+    "        Div(\"Logo\", cls=str(font_weight.bold)),\n",
     "        Div(\n",
     "            \"Home\", \"About\", \"Contact\",\n",
     "            cls=combine_classes(display_tw.flex, gap(4))\n",
@@ -1640,7 +1640,7 @@
     "    \n",
     "    # Flexbox vertical centering\n",
     "    hero = Div(\n",
-    "        H1(\"Welcome\", cls=combine_classes(text._4xl, font.bold)),\n",
+    "        H1(\"Welcome\", cls=combine_classes(font_size._4xl, font_weight.bold)),\n",
     "        P(\"Build amazing things\"),\n",
     "        Button(\"Get Started\", cls=str(m.t(4))),\n",
     "        cls=combine_classes(\n",
@@ -1657,7 +1657,7 @@
     "    # Complex grid layout with spanning\n",
     "    dashboard = Div(\n",
     "        # Header spans full width\n",
-    "        Header(\"Dashboard\", cls=combine_classes(col_span.full, p(4), bg.blue._500, text.white)),\n",
+    "        Header(\"Dashboard\", cls=combine_classes(col_span.full, p(4), bg.blue._500, text_color.white)),\n",
     "        \n",
     "        # Sidebar\n",
     "        Aside(\"Sidebar\", cls=combine_classes(row_span(2), p(4), bg.gray._200)),\n",
