--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -1118,7 +1118,7 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import border, rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
@@ -1173,7 +1173,7 @@
     "            select.none,\n",
     "            pointer_events.auto,\n",
     "            bg.blue._500,\n",
-    "            text.white,\n",
+    "            text_color.white,\n",
     "            p.x(4),\n",
     "            p.y(2),\n",
     "            rounded.full,\n",
@@ -1441,7 +1441,7 @@
     "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
@@ -1485,7 +1485,7 @@
     "            display_tw.block,\n",
     "            p(3),\n",
     "            bg.gray._900,\n",
-    "            text.gray._100,\n",
+    "            text_color.gray._100,\n",
     "            rounded.full\n",
     "        )\n",
     "    )\n",
@@ -1661,7 +1661,7 @@
     "    from fasthtml.common import Div, Input, Form, Pre\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text, font\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, font_weight, font_family, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow\n",
     "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, transform\n",
@@ -1685,7 +1685,7 @@
     "                appearance.none,\n",
     "                scheme.dark,\n",
     "                bg.gray._800,\n",
-    "                text.white,\n",
+    "                text_color.white,\n",
     "                p.x(3),\n",
     "                p.y(2),\n",
     "                rounded.full\n",
@@ -1713,9 +1713,9 @@
     "                resize.both,\n",
     "                scroll.auto,\n",
     "                scroll_p(4),\n",
-    "                font.mono,\n",
+    "                font_family.mono,\n",
     "                bg.gray._900,\n",
-    "                text.gray._100,\n",
+    "                text_color.gray._100,\n",
     "                p(4),\n",
     "                rounded.full,\n",
     "                overflow.auto\n",
