--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -815,7 +815,7 @@
     "    from cjm_fasthtml_tailwind.utilities.sizing import w\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text, text_align, font\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, font_family, font_weight, text_color, text_align\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import overflow, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
@@ -828,9 +828,9 @@
     "                \"Quarterly Sales Report\",\n",
     "                cls=combine_classes(\n",
     "                    caption_side.top,\n",
-    "                    text.lg,\n",
-    "                    font.semibold,\n",
-    "                    text.gray._700,\n",
+    "                    font_size.lg,\n",
+    "                    font_weight.semibold,\n",
+    "                    text_color.gray._700,\n",
     "                    m.b(2)\n",
     "                )\n",
     "            ),\n",
@@ -906,7 +906,7 @@
     "            border_spacing.x(1),\n",
     "            border_spacing.y(0.5),\n",
     "            table_layout.auto,\n",
-    "            text.sm\n",
+    "            font_size.sm\n",
     "        )\n",
     "    )\n",
     "    \n",
