--- a/nbs/utilities/transitions_and_animation.ipynb
+++ b/nbs/utilities/transitions_and_animation.ipynb
@@ -798,7 +798,7 @@
     "    \"\"\"Test transition and animation utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Span, A, Img\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
@@ -812,7 +812,7 @@
     "    button = Button(\n",
     "        \"Hover me\",\n",
     "        cls=combine_classes(\n",
-    "            bg.blue._500, bg.blue._700.hover, text.white, p.x(4), p.y(2), rounded.full,\n",
+    "            bg.blue._500, bg.blue._700.hover, text_color.white, p.x(4), p.y(2), rounded.full,\n",
     "            transition.colors,\n",
     "            duration._300,\n",
     "            ease.in_out\n",
@@ -852,7 +852,7 @@
     "    delayed_link = A(\n",
     "        \"Delayed hover\",\n",
     "        cls=combine_classes(\n",
-    "            text.gray._600, text.blue._500.hover,\n",
+    "            text_color.gray._600, text_color.blue._500.hover,\n",
     "            transition.colors,\n",
     "            duration._500,\n",
     "            delay._200\n",
@@ -981,7 +981,7 @@
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, top, right, display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
     "    \n",
     "    # Loading spinner\n",
@@ -1015,7 +1015,7 @@
     "    arrow = Div(\n",
     "        \"↓\",\n",
     "        cls=combine_classes(\n",
-    "            text._2xl,\n",
+    "            font_size._2xl,\n",
     "            animate.bounce\n",
     "        )\n",
     "    )\n",
